name:		DRBG
version:	0.0.0.2
license:	BSD3
license-file:	LICENSE
author:		Thomas DuBuisson <thomas.dubuisson@gmail.com>
maintainer:	Thomas DuBuisson
description:	A deterministic random bit generator implementing HashDRBG from NIST SP 800-90.  UNTESTED AND NOT YET USEFUL
synopsis:	A deterministic random bit generator implementing HashDRBG from NIST SP 800-90
category:	Data, Cryptography
stability:	stable
build-type:	Simple
cabal-version:	>= 1.6
tested-with:	GHC == 6.10.1
extra-source-files:

Library
  Build-Depends: base == 4.*, cereal, bytestring, prettyclass, binary
  ghc-options:
  hs-source-dirs:
  exposed-modules: Data.DRBG, Data.DRBG.Hash, Data.Crypto.Classes, Data.DRBG.HMAC
  other-modules: Data.DRBG.HashDF
