name:		DRBG
version:	0.0.0.2
license:	BSD3
license-file:	LICENSE
author:		Thomas DuBuisson <thomas.dubuisson@gmail.com>
maintainer:	Thomas DuBuisson
description:	A deterministic random bit generator implementing HashDRBG from NIST SP 800-90.  UNTESTED AND NOT YET USEFUL
synopsis:	A deterministic random bit generator implementing HashDRBG from NIST SP 800-90
category:	Cryptography
stability:	stable
build-type:	Simple
cabal-version:	>= 1.6
tested-with:	GHC == 6.10.1
Data-Files: Test/HMAC_DRBG.txt Test/Hash_DRBG.txt Test/CTR_DRBG.txt Test/Dual_EC_DRBG.txt
extra-source-files:
  Test/HMAC_DRBG.txt Test/Hash_DRBG.txt Test/CTR_DRBG.txt Test/Dual_EC_DRBG.txt

flag test
  description: Build a program to test the DRBG library
  default: False


Library
  Build-Depends: base >= 4.0 && < 4.4, cereal >= 0.2 && <= 0.4 , bytestring, prettyclass, binary, tagged, crypto-api >= 0.1.0.0, cryptohash >= 0.6
  ghc-options:
  hs-source-dirs:
  exposed-modules: Crypto.Random.DRBG.Hash, Crypto.Random.DRBG.HMAC, Crypto.Random.DRBG
  other-modules: Crypto.Random.DRBG.HashDF, Crypto.Random.DRBG.Types

Executable drbg_test
  if !flag(test)
    buildable: False
  main-is: Test/KAT.hs
  if flag(test)
    build-depends: base, QuickCheck, crypto-api, bytestring, binary, cereal, cryptohash
  other-modules: Paths_DRBG
